// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbarSearch rendering renders expected elements 1`] = `
<div
  className="Table__search"
>
  <span
    onClick={[Function]}
  >
    <SvgIcon
      className="Table__searchIcon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
    />
  </span>
  <input
    className="Table__searchInput"
    id="test"
    onChange={[Function]}
    onKeyDown={[Function]}
    role="searchbox"
    type="text"
    value="foo"
  />
  <button
    aria-label="Clear"
    className="Table__searchClear"
    onClick={[Function]}
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "xmark-thin",
        }
      }
    />
  </button>
</div>
`;

exports[`TableToolbarSearch rendering renders expected elements when className is set 1`] = `
<div
  className="Table__search TestClass"
>
  <span
    onClick={[Function]}
  >
    <SvgIcon
      className="Table__searchIcon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
    />
  </span>
  <input
    className="Table__searchInput"
    id="test"
    onChange={[Function]}
    onKeyDown={[Function]}
    role="searchbox"
    type="text"
    value="foo"
  />
  <button
    aria-label="Clear"
    className="Table__searchClear"
    onClick={[Function]}
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "xmark-thin",
        }
      }
    />
  </button>
</div>
`;

exports[`TableToolbarSearch rendering renders expected elements when initialText is set 1`] = `
<div
  className="Table__search"
>
  <span
    onClick={[Function]}
  >
    <SvgIcon
      className="Table__searchIcon"
      icon={
        Object {
          "icon": Array [],
          "iconName": "magnifying-glass",
          "prefix": "fas",
        }
      }
    />
  </span>
  <input
    className="Table__searchInput"
    id="test"
    onChange={[Function]}
    onKeyDown={[Function]}
    role="searchbox"
    type="text"
    value="bar"
  />
  <button
    aria-label="Clear"
    className="Table__searchClear"
    onClick={[Function]}
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "xmark-thin",
        }
      }
    />
  </button>
</div>
`;
